--- a/life_expectancy_gdp.ipynb
+++ b/life_expectancy_gdp.ipynb
@@ -30,11 +30,11 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-08-30T06:01:24.002752Z",
-     "iopub.status.busy": "2024-08-30T06:01:24.002752Z",
-     "iopub.status.idle": "2024-08-30T06:01:27.844020Z",
-     "shell.execute_reply": "2024-08-30T06:01:27.843007Z",
-     "shell.execute_reply.started": "2024-08-30T06:01:24.002752Z"
+     "iopub.execute_input": "2024-09-12T05:29:15.963369Z",
+     "iopub.status.busy": "2024-09-12T05:29:15.963369Z",
+     "iopub.status.idle": "2024-09-12T05:29:20.109004Z",
+     "shell.execute_reply": "2024-09-12T05:29:20.107323Z",
+     "shell.execute_reply.started": "2024-09-12T05:29:15.963369Z"
     }
    },
    "outputs": [
@@ -175,11 +175,11 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-08-30T06:01:27.846029Z",
-     "iopub.status.busy": "2024-08-30T06:01:27.846029Z",
-     "iopub.status.idle": "2024-08-30T06:01:30.116593Z",
-     "shell.execute_reply": "2024-08-30T06:01:30.114877Z",
-     "shell.execute_reply.started": "2024-08-30T06:01:27.846029Z"
+     "iopub.execute_input": "2024-09-12T05:29:20.109004Z",
+     "iopub.status.busy": "2024-09-12T05:29:20.109004Z",
+     "iopub.status.idle": "2024-09-12T05:29:21.573111Z",
+     "shell.execute_reply": "2024-09-12T05:29:21.572846Z",
+     "shell.execute_reply.started": "2024-09-12T05:29:20.109004Z"
     }
    },
    "outputs": [
@@ -214,51 +214,50 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th>Year</th>\n",
-       "      <th>Country</th>\n",
        "      <th>2000</th>\n",
        "      <th>2014</th>\n",
        "      <th>percentage_increase</th>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Country</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Chile</td>\n",
+       "      <th>Chile</th>\n",
        "      <td>77.3</td>\n",
        "      <td>80.3</td>\n",
        "      <td>3.880983</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>China</td>\n",
+       "      <th>China</th>\n",
        "      <td>71.7</td>\n",
        "      <td>75.8</td>\n",
        "      <td>5.718271</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Germany</td>\n",
+       "      <th>Germany</th>\n",
        "      <td>78.0</td>\n",
        "      <td>80.9</td>\n",
        "      <td>3.717949</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Mexico</td>\n",
+       "      <th>Mexico</th>\n",
        "      <td>74.8</td>\n",
        "      <td>76.6</td>\n",
        "      <td>2.406417</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>United States of America</td>\n",
+       "      <th>United States of America</th>\n",
        "      <td>76.8</td>\n",
        "      <td>79.1</td>\n",
        "      <td>2.994792</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Zimbabwe</td>\n",
+       "      <th>Zimbabwe</th>\n",
        "      <td>46.0</td>\n",
        "      <td>59.2</td>\n",
        "      <td>28.695652</td>\n",
@@ -268,13 +267,14 @@
        "</div>"
       ],
       "text/plain": [
-       "Year                   Country  2000  2014  percentage_increase\n",
-       "0                        Chile  77.3  80.3             3.880983\n",
-       "1                        China  71.7  75.8             5.718271\n",
-       "2                      Germany  78.0  80.9             3.717949\n",
-       "3                       Mexico  74.8  76.6             2.406417\n",
-       "4     United States of America  76.8  79.1             2.994792\n",
-       "5                     Zimbabwe  46.0  59.2            28.695652"
+       "Year                      2000  2014  percentage_increase\n",
+       "Country                                                  \n",
+       "Chile                     77.3  80.3             3.880983\n",
+       "China                     71.7  75.8             5.718271\n",
+       "Germany                   78.0  80.9             3.717949\n",
+       "Mexico                    74.8  76.6             2.406417\n",
+       "United States of America  76.8  79.1             2.994792\n",
+       "Zimbabwe                  46.0  59.2            28.695652"
       ]
      },
      "metadata": {},
@@ -309,7 +309,7 @@
     "g.savefig('figure1.png')\n",
     "# Calculate percentage increase in LEABY from 2000 to 2014 for all countries\n",
     "filter_data = data[data['Year'].isin([2000, 2014])]\n",
-    "pivot_leaby = filter_data.pivot_table(index='Country', values='LEABY', columns='Year', aggfunc='mean').reset_index()\n",
+    "pivot_leaby = filter_data.pivot_table(index='Country', values='LEABY', columns='Year', aggfunc='mean')\n",
     "pivot_leaby['percentage_increase'] = ((pivot_leaby[2014] - pivot_leaby[2000]) / pivot_leaby[2000]) * 100\n",
     "display(pivot_leaby)"
    ]
@@ -335,11 +335,11 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-08-30T06:01:30.118860Z",
-     "iopub.status.busy": "2024-08-30T06:01:30.118860Z",
-     "iopub.status.idle": "2024-08-30T06:01:31.738111Z",
-     "shell.execute_reply": "2024-08-30T06:01:31.738111Z",
-     "shell.execute_reply.started": "2024-08-30T06:01:30.118860Z"
+     "iopub.execute_input": "2024-09-12T05:29:21.574597Z",
+     "iopub.status.busy": "2024-09-12T05:29:21.574597Z",
+     "iopub.status.idle": "2024-09-12T05:29:22.291498Z",
+     "shell.execute_reply": "2024-09-12T05:29:22.291498Z",
+     "shell.execute_reply.started": "2024-09-12T05:29:21.574597Z"
     }
    },
    "outputs": [
@@ -493,11 +493,11 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-08-30T06:01:31.741167Z",
-     "iopub.status.busy": "2024-08-30T06:01:31.739987Z",
-     "iopub.status.idle": "2024-08-30T06:01:32.272728Z",
-     "shell.execute_reply": "2024-08-30T06:01:32.272728Z",
-     "shell.execute_reply.started": "2024-08-30T06:01:31.741167Z"
+     "iopub.execute_input": "2024-09-12T05:29:22.291498Z",
+     "iopub.status.busy": "2024-09-12T05:29:22.291498Z",
+     "iopub.status.idle": "2024-09-12T05:29:22.767181Z",
+     "shell.execute_reply": "2024-09-12T05:29:22.767181Z",
+     "shell.execute_reply.started": "2024-09-12T05:29:22.291498Z"
     }
    },
    "outputs": [
@@ -573,11 +573,11 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-08-30T06:01:32.278099Z",
-     "iopub.status.busy": "2024-08-30T06:01:32.278099Z",
-     "iopub.status.idle": "2024-08-30T06:01:32.986664Z",
-     "shell.execute_reply": "2024-08-30T06:01:32.985444Z",
-     "shell.execute_reply.started": "2024-08-30T06:01:32.278099Z"
+     "iopub.execute_input": "2024-09-12T05:29:22.767181Z",
+     "iopub.status.busy": "2024-09-12T05:29:22.767181Z",
+     "iopub.status.idle": "2024-09-12T05:29:23.113055Z",
+     "shell.execute_reply": "2024-09-12T05:29:23.111210Z",
+     "shell.execute_reply.started": "2024-09-12T05:29:22.767181Z"
     }
    },
    "outputs": [
@@ -617,11 +617,11 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-08-30T06:01:32.990424Z",
-     "iopub.status.busy": "2024-08-30T06:01:32.990424Z",
-     "iopub.status.idle": "2024-08-30T06:01:33.872816Z",
-     "shell.execute_reply": "2024-08-30T06:01:33.872258Z",
-     "shell.execute_reply.started": "2024-08-30T06:01:32.990424Z"
+     "iopub.execute_input": "2024-09-12T05:29:23.114206Z",
+     "iopub.status.busy": "2024-09-12T05:29:23.114206Z",
+     "iopub.status.idle": "2024-09-12T05:29:24.118358Z",
+     "shell.execute_reply": "2024-09-12T05:29:24.117253Z",
+     "shell.execute_reply.started": "2024-09-12T05:29:23.114206Z"
     }
    },
    "outputs": [],
